HW06 JspMealController created

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -2,11 +2,25 @@ app.title=Подсчет калорий
 app.home=Главная
 app.footer=Приложение стажировки <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a>
 app.login=Зайти как
+app.save=Сохранить
+app.cancel=Отмена
+app.update=Обновить
+app.delete=Удалить
+app.create=Создать
 user.title=Пользователи
 user.name=Имя
 user.email=Почта
 user.roles=Роли
 user.active=Активный
 user.registered=Зарегистрирован
-meal.title=Моя еда
+meal.title=Моё питание
+meal.filter.fromDate=Дата начала (включая)
+meal.filter.toDate=По дату (включая)
+meal.filter.fromTime=Время начала (включая)
+meal.filter.toTime=По время (включая)
+meal.filter.submit=Отфильтровать
+meal.addMeal=Добавить прием пищи
+meal.dateTime=Дата
+meal.description=Описание
+meal.calories=Калорийность
 common.select=Выбрать
