--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -10,6 +10,9 @@ app.profile=профиль
 app.register=Регистрация
 app.registered=Вы зарегистрированы. Введите ваш логин/пароль.
 
+err.duplicated.email=Пользователь с таким email уже существует
+err.duplicated.datetime=Питание с такими датой, временем уже существует
+
 user.title=Пользователи
 user.edit=Редактировать пользователя
 user.add=Добавить пользователя
